--- a/about.html
+++ b/about.html
@@ -1,128 +1,116 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>О проекте — Help Project</title>
-  <style>
-    body {
-      font-family: "Arial", sans-serif;
-      background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
-      color: #333;
-      text-align: center;
-      padding: 40px 20px;
-      margin: 0;
-      min-height: 100vh;
-    }
-    .container {
-      max-width: 800px;
-      background: rgba(255, 255, 255, 0.8);
-      margin: auto;
-      border-radius: 20px;
-      padding: 30px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      backdrop-filter: blur(10px);
-    }
-    h1 {
-      color: #2a8c77;
-    }
-    p {
-      font-size: 1.2em;
-      line-height: 1.6;
-    }
-    .btn {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 25px;
-      background-color: #3bb19b;
-      color: white;
-      border: none;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    .btn:hover {
-      background-color: #2a8c77;
-    }
-    .lang-switch {
-      margin-top: 20px;
-    }
-    .lang-btn {
-      margin: 0 10px;
-      cursor: pointer;
-      color: #3bb19b;
-      font-weight: bold;
-      text-decoration: underline;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>О проекте — Платформа Взаимопомощи</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="container">
-    <h1 id="title">О проекте Help Project 🌿</h1>
-    <p id="text">
-      <strong>Help Project</strong> — это пространство взаимопомощи и доброты.  
-      Здесь люди объединяются, чтобы поддерживать друг друга, собирать средства и вдохновлять.  
-      Каждый может рассказать свою историю и получить помощь 💚
-    </p>
-    <p id="link">
-      Наш сайт: <a href="https://nataliahelp.netlify.app">nataliahelp.netlify.app</a>
-    </p>
 
-<!-- 🔽 Начало блока политики -->
-<section class="policy" style="margin-top:25px; padding:20px; background:#f6fff9; border:1px solid #d4f0df; border-radius:10px;">
-  <h2 style="color:#2a8a5a;">🌱 Политика пожертвований и взаимопомощи</h2>
-  <p><strong>Natalia Help Project (NHP)</strong> — это инициатива взаимопомощи, созданная для того, чтобы люди могли поддерживать друг друга в достижении жизненных целей. Все переводы участников являются <strong>добровольными пожертвованиями</strong>.</p>
-
-  <h3>💞 Принципы работы</h3>
-  <ul>
-    <li>Добровольные взносы через PayPal или Revolut.</li>
-    <li>Средства распределяются между участниками <strong>по очереди</strong>.</li>
-    <li>Небольшая часть средств идёт на развитие сайта и техническое обслуживание.</li>
-    <li>Вся статистика и распределения открыты и прозрачны.</li>
-  </ul>
-
-  <h3>💬 Добровольность и ответственность</h3>
-  <p>Все взносы совершаются добровольно, без обещаний прибыли или возврата средств. Проект — акт доверия и взаимопомощи, а не инвестиция.</p>
-
-  <h3>🔒 Безопасность и конфиденциальность</h3>
-  <p>Платежи проходят через защищённые системы PayPal и Revolut. Данные участников не передаются третьим лицам и защищены по стандартам GDPR.</p>
-
-  <h3>📊 Прозрачность и отчётность</h3>
-  <p>Проект публикует общие данные о собранных и распределённых средствах, показывая, кому уже оказана помощь.</p>
-
-  <h3>⚖️ Юридическое уведомление</h3>
-  <p>Natalia Help Project действует как неприбыльная инициатива. Все переводы рассматриваются как безвозмездные пожертвования. Проект не предоставляет финансовых услуг и не требует лицензии в Венгрии и ЕС.</p>
-</section>
-<!-- 🔼 Конец блока политики -->
-    <a href="index.html" class="btn">🏠 На главную</a>
-    <a href="apply.html" class="btn">💌 Подать заявку</a>
-
+<header>
+  <h1>Платформа&nbsp;Взаимопомощи</h1>
+  <nav>
+    <a href="index.html">Главная</a>
+    <a href="queue.html">Участники</a>
+    <a href="apply.html">Добавить&nbsp;себя</a>
+    <a href="rules.html">Условия</a>
     <div class="lang-switch">
-      <span class="lang-btn" onclick="setLang('ru')">Русский 🇷🇺</span> |
-      <span class="lang-btn" onclick="setLang('en')">English 🇬🇧</span>
+      <button>RU</button>
+      <button onclick="window.location='about-en.html'">EN</button>
     </div>
+  </nav>
+</header>
+
+<section>
+  <div class="container">
+    <h3>Если вы читаете это — значит, не просто так</h3>
+
+    <p>У каждого человека есть мечты, и чаще всего — это мечта о собственном жилье.  
+       Я говорю не о тех, кто родился в обеспеченной семье или получил квартиру в наследство.  
+       Я говорю о тех, кто всю жизнь работает, годами ходит на работу,  
+       но не может позволить себе дом, квартиру или хотя бы участок.</p>
+
+    <p>Многим людям просто не повезло иметь стартовый капитал,  
+       финансовую помощь родителей или возможность собрать крупную сумму.  
+       Жизнь идёт: семья, работа, расходы — и накопить становится нереально.</p>
+
+    <p>Именно для таких людей, как я сама,  
+       и была создана <strong>Платформа Взаимопомощи</strong>.</p>
+
+    <hr style="border:0;border-bottom:1px solid var(--gold);margin:40px auto;width:60%">
+
+    <h3>Почему этот проект появился</h3>
+
+    <p>Я очень хорошо знаю, что значит работать всю жизнь и всё равно не иметь возможности купить жильё.  
+       И я знаю, что таких людей — много.  
+       Мы не хуже и не глупее — просто у нас нет финансовой подушки.</p>
+
+    <p>Поэтому я создала проект, где мы объединяемся посильными взносами  
+       — <strong>10 €, 50 € или 100 €</strong> — чтобы вместе помогать друг другу.</p>
+
+    <p>Это не кредит.  
+       Это не инвестиция.  
+       Это не какие-то схемы.  
+       Это — добровольная взаимопомощь людей, которые помогают друг другу шаг за шагом.</p>
+
+    <hr style="border:0;border-bottom:1px solid var(--gold);margin:40px auto;width:60%">
+
+    <h3>Как всё работает</h3>
+
+    <p>Мы собираемся в одну общую очередь.  
+       По мере того как поступают взносы и пожертвования,  
+       один из участников получает помощь на свою цель:  
+       квартиру, дом, участок, дачу или другое, связанное с жильём.</p>
+
+    <ul>
+      <li>Все взносы добровольные.</li>
+      <li>Суммы небольшие, но когда нас много — это становится реальной силой.</li>
+      <li>Получивший помощь остаётся в проекте и поддерживает следующих.</li>
+      <li>Очередь открыта и видна на сайте.</li>
+      <li>Комиссия идёт только на развитие платформы.</li>
+    </ul>
+
+    <p>Это круг поддержки.  
+       Сегодня мы помогаем одному — завтра он помогает следующим.  
+       И так проходят все.</p>
+
+    <hr style="border:0;border-bottom:1px solid var(--gold);margin:40px auto;width:60%">
+
+    <h3>Если вы сомневаетесь — начните с малого</h3>
+
+    <p>Никто здесь никого не заставляет.  
+       Всё строится на доброй воле и желании людей помогать друг другу.</p>
+
+    <p>Вы можете сделать минимальный вклад — и увидеть движение очереди.  
+       Убедиться, что люди действительно получают помощь.  
+       Увидеть, что всё работает просто, честно и прозрачно.</p>
+
+    <p>Если нужна дополнительная информация — вы всегда можете написать.  
+       Я отвечу каждому.</p>
+
+    <hr style="border:0;border-bottom:1px solid var(--gold);margin:40px auto;width:60%">
+
+    <h3>Присоединяйтесь</h3>
+
+    <p>Если вы давно мечтаете о собственном жилье, но понимаете, что сами не справляетесь —  
+       вы не один. Здесь таких много.  
+       И вместе мы можем сделать намного больше, чем поодиночке.</p>
+
+    <div style="text-align:center; margin-top:25px;">
+      <button class="button" onclick="window.location='apply.html'">Добавить себя</button>
+    </div>
+
   </div>
+</section>
 
-  <script>
-    const content = {
-      ru: {
-        title: "О проекте Help Project 🌿",
-        text: "Help Project — это пространство взаимопомощи и доброты. Здесь люди объединяются, чтобы поддерживать друг друга, собирать средства и вдохновлять. Каждый может рассказать свою историю и получить помощь 💚",
-        link: "Наш сайт: <a href='https://nataliahelp.netlify.app'>nataliahelp.netlify.app</a>"
-      },
-      en: {
-        title: "About Help Project 🌿",
-        text: "Help Project is a space of kindness and mutual support. Here people unite to help each other, raise funds and inspire. Everyone can share their story and receive help 💚",
-        link: "Our website: <a href='https://nataliahelp.netlify.app'>nataliahelp.netlify.app</a>"
-      }
-    };
+<footer>
+  <div class="container">
+    <p>© Платформа Взаимопомощи — добровольная поддержка людей</p>
+    <p><a href="index.html">Главная</a> | <a href="queue.html">Участники</a> | <a href="apply.html">Добавить себя</a></p>
+  </div>
+</footer>
 
-    function setLang(lang) {
-      document.getElementById("title").innerText = content[lang].title;
-      document.getElementById("text").innerHTML = content[lang].text;
-      document.getElementById("link").innerHTML = content[lang].link;
-    }
-  </script>
 </body>
 </html>
