--- a/faq-en.html
+++ b/faq-en.html
@@ -1,65 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Natalia Help Project — FAQ | Together We’re Stronger 🌿</title>
-  <meta name="description" content="FAQ of Natalia Help Project — honest mutual support based on trust and transparency. Created by Natalia Domkina.">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="180x180" href="nhp-favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="nhp-favicon-512.png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FAQ — Mutual Support Platform</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header class="topbar">
-    <div class="logo">🌿 Natalia Help Project — NHP</div>
-    <nav class="main-nav">
-      <a href="nataliahelp-en.html">Home</a>
-      <a href="faq.html" class="lang-link">RU 🇷🇺</a>
-      <a href="faq-en.html" class="lang-link">EN 🇬🇧</a>
-    </nav>
-  </header>
 
-  <main>
-    <section class="section card">
-      <h1>FAQ — Honest Answers</h1>
-      <p class="section-intro">Answers to the most common questions about <strong>Natalia Help Project</strong> 🌿</p>
+<header>
+  <h1>Mutual&nbsp;Support&nbsp;Platform</h1>
+  <nav>
+    <a href="nataliahelp-en.html">Home</a>
+    <a href="about-en.html">About</a>
+    <a href="queue.html">Participants</a>
+    <a href="rules-en.html">Terms</a>
+    <a href="apply.html">Join</a>
+    <div class="lang-switch">
+      <button onclick="window.location='faq.html'">RU</button>
+      <button>EN</button>
+    </div>
+  </nav>
+</header>
 
-      <details class="faq-item" open>
-        <summary>Why did I create this project?</summary>
-        <p>I started working at 16. I had no inheritance, no home of my own. I know what it means to work hard and still struggle to feel secure. There are millions like me. This project isn’t about pity — it’s about hope and mutual support. A place where everyone can breathe easier and know they are not alone. 💚</p>
-      </details>
+<section>
+  <div class="container">
+    <h3>Frequently Asked Questions</h3>
+    <p style="max-width:800px;margin:auto;text-align:center;">
+      This extended FAQ provides clear and honest answers about how the Mutual Support Platform works.  
+      If you're considering joining or simply want to understand the concept better,  
+      this page will guide you through every important detail.
+    </p>
+  </div>
+</section>
 
-      <details class="faq-item">
-        <summary>Is this charity or begging?</summary>
-        <p>This is mutual support, not charity. No one is asking — everyone is participating. It’s an honest circle of trust: today you help others, tomorrow others help you. No middlemen, no illusions — just people and kindness. 🌿</p>
-      </details>
+<section>
+  <div class="container">
 
-      <details class="faq-item">
-        <summary>Where does the money go?</summary>
-        <p>All contributions go into a shared fund. Each month a portion is distributed in order, and part is saved in reserve to ensure stability. Everything is recorded and visible to participants.</p>
-      </details>
+    <div class="faq-block">
 
-      <details class="faq-item">
-        <summary>Can I stay anonymous?</summary>
-        <p>Yes. Stories and personal details are shared only with consent. Everything here is voluntary and honest. Respect for privacy is essential.</p>
-      </details>
+      <h4>1. What is the Mutual Support Platform?</h4>
+      <p>It is a voluntary community where people help each other achieve one major goal —  
+      getting their own home: an apartment, a house, land, or a summer cottage.  
+      It is not a bank, loan service, or investment scheme.</p>
 
-      <details class="faq-item">
-        <summary>Why is transparency so important?</summary>
-        <p>Because trust is the foundation. Everyone deserves to know where each euro goes. Transparency builds confidence and keeps the project fair for all.</p>
-      </details>
+      <h4>2. Who is this project for?</h4>
+      <p>For people who work for years but still cannot save enough for housing.  
+      For those who did not inherit property or receive financial help.  
+      For those who want honest, transparent support from people in the same situation.</p>
 
-      <details class="faq-item">
-        <summary>How can I help if I’m not participating?</summary>
-        <p>You can tell your friends, share the link, contribute €1, or just spread the message. Even a small act can make a big difference. 💫</p>
-      </details>
-    </section>
-  </main>
+      <h4>3. How does the system work?</h4>
+      <p>You make a voluntary contribution — 10€, 50€, or 100€.  
+      Funds are distributed through an open queue.  
+      One participant receives support, and everyone else moves forward.  
+      After receiving help, you stay and support others.</p>
 
-  <footer class="footer">
-    <p>© 2025 Natalia Domkina — Natalia Help Project — NHP | Together We’re Stronger 🌿</p>
-  </footer>
+      <h4>4. Why is this system fair?</h4>
+      <p>Because:</p>
+      <ul>
+        <li>the queue is public;</li>
+        <li>reports are visible;</li>
+        <li>the commission is only for platform maintenance;</li>
+        <li>participants stay after receiving help;</li>
+        <li>no promises of profit or unrealistic expectations.</li>
+      </ul>
 
-  <script src="script.js"></script>
+      <h4>5. What contribution amounts are available?</h4>
+      <p>Voluntary contributions of <strong>10€, 50€, or 100€</strong>.</p>
+
+      <h4>6. Why these amounts?</h4>
+      <p>They are affordable for most people.  
+      Small contributions from many people create real strength.</p>
+
+      <h4>7. What happens after receiving support?</h4>
+      <p>You remain part of the platform and help the next participants.  
+      This creates a continuous circle of support.</p>
+
+      <h4>8. What goals can be funded?</h4>
+      <p>Only housing-related goals: apartment, house, land, cottage, renovation,  
+      or initial mortgage payment.</p>
+
+      <h4>9. Can I donate without joining?</h4>
+      <p>Yes. Anyone can make a donation to support participants.</p>
+
+      <h4>10. How does the project generate support?</h4>
+      <p>Through large numbers of participants making small contributions.  
+      One person cannot help everyone — but thousands of people can.</p>
+
+      <h4>11. How is the queue formed?</h4>
+      <p>By submission time, participation activity, and confirmed contributions.</p>
+
+      <h4>12. How transparent is everything?</h4>
+      <p>The queue and reports are public.  
+      Nothing is hidden or manipulated.</p>
+
+      <h4>13. What is the platform commission?</h4>
+      <p>A small amount used only for hosting, technical maintenance, security, and development.</p>
+
+      <h4>14. How much is the commission?</h4>
+      <p>Minimal. The exact number is shown in the reports section.</p>
+
+      <h4>15. Is support guaranteed?</h4>
+      <p>The queue moves steadily, but speed depends on the number of participants and donations.</p>
+
+      <h4>16. How will I know when it's my turn?</h4>
+      <p>You will see it in the participants’ table and receive a notification.</p>
+
+      <h4>17. Can I leave the project?</h4>
+      <p>Yes. Participation is fully voluntary.</p>
+
+      <h4>18. Do I have to participate every month?</h4>
+      <p>No. But regular contributions help the queue move faster.</p>
+
+      <h4>19. Are there age limits?</h4>
+      <p>Yes — 18+.</p>
+
+      <h4>20. Why should I share the link with others?</h4>
+      <p>Because more people means faster progress for everyone.</p>
+
+      <h4>21. Why is this a private initiative?</h4>
+      <p>Because the project was created from real life needs, not bureaucracy.  
+      A person like you needed help — and created a platform for others.</p>
+
+      <h4>22. Is this a scam?</h4>
+      <p>No. Transparency, open queue, visible reports, and small voluntary contributions  
+      exclude any fraudulent nature.</p>
+
+      <h4>23. Why do people stay after receiving help?</h4>
+      <p>Because it is fair — the circle must continue.  
+      Everyone gets their turn.</p>
+
+      <h4>24. Should I trust this project?</h4>
+      <p>Only if you believe in transparent, voluntary mutual support.  
+      Nothing is forced.</p>
+
+      <h4>25. How do I join?</h4>
+      <p>Fill out a short form on the <a href="apply.html">Join</a> page.</p>
+
+      <h4>26. Why can this change your life?</h4>
+      <p>Because saving for housing alone is almost impossible —  
+      but together it becomes realistic.</p>
+
+      <h4>27. Can I start with the minimum amount?</h4>
+      <p>Yes — you can start with a small contribution.</p>
+
+      <h4>28. What should I do next?</h4>
+      <p>Read → apply → contribute.</p>
+
+      <h4>29. Can I view the queue without registering?</h4>
+      <p>Yes. The queue is open to everyone.</p>
+
+      <h4>30. Why is this project growing now?</h4>
+      <p>Because thousands of people are tired of trying alone  
+      and want a real chance to achieve housing.</p>
+
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container" style="text-align:center;">
+    <button class="button" onclick="window.location='apply.html'">Join the Platform</button>
+  </div>
+</section>
+
+<footer>
+  <div class="container">
+    <p>© Mutual Support Platform — voluntary support for people</p>
+    <p><a href="nataliahelp-en.html">Home</a> | <a href="about-en.html">About</a> | <a href="queue.html">Participants</a></p>
+  </div>
+</footer>
+
 </body>
 </html>
