--- a/faq.html
+++ b/faq.html
@@ -1,65 +1,159 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Natalia Help Project — FAQ | Вместе мы сильнее 🌿</title>
-  <meta name="description" content="FAQ проекта Natalia Help Project — честная взаимопомощь, основанная на доверии и прозрачности. Автор: Natalia Domkina.">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="180x180" href="nhp-favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="nhp-favicon-512.png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FAQ — Платформа Взаимопомощи</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header class="topbar">
-    <div class="logo">🌿 Natalia Help Project — NHP</div>
-    <nav class="main-nav">
-      <a href="index.html">Главная</a>
-      <a href="faq.html" class="lang-link">RU 🇷🇺</a>
-      <a href="faq-en.html" class="lang-link">EN 🇬🇧</a>
-    </nav>
-  </header>
 
-  <main>
-    <section class="section card">
-      <h1>FAQ — Честные ответы</h1>
-      <p class="section-intro">Ответы на самые частые вопросы участников и гостей проекта <strong>Natalia Help Project</strong> 🌿</p>
+<header>
+  <h1>Платформа&nbsp;Взаимопомощи</h1>
+  <nav>
+    <a href="index.html">Главная</a>
+    <a href="about.html">О проекте</a>
+    <a href="queue.html">Участники</a>
+    <a href="rules.html">Условия</a>
+    <a href="apply.html">Добавить&nbsp;себя</a>
+    <div class="lang-switch">
+      <button>RU</button>
+      <button onclick="window.location='faq-en.html'">EN</button>
+    </div>
+  </nav>
+</header>
 
-      <details class="faq-item" open>
-        <summary>Почему я создала этот проект?</summary>
-        <p>Я начала работать в 16 лет. У меня не было наследства и своего жилья. Я знаю, каково это — трудиться всю жизнь и всё равно бороться за стабильность. Таких, как я, миллионы. Этот проект создан не для жалости, а для поддержки и надежды. Чтобы каждый мог вдохнуть спокойнее и почувствовать, что он не один. 💚</p>
-      </details>
+<section>
+  <div class="container">
+    <h3>Часто задаваемые вопросы</h3>
+    <p style="max-width:800px;margin:auto;text-align:center;">
+      Это расширенный FAQ — ответы на все важные вопросы о Платформе Взаимопомощи.  
+      Здесь вы найдёте полное и честное объяснение того, как работает проект, кому он подходит,  
+      почему он появился и почему помогает людям двигаться к собственному жилью.
+    </p>
+  </div>
+</section>
 
-      <details class="faq-item">
-        <summary>Это благотворительность или попрошайничество?</summary>
-        <p>Это взаимопомощь. Здесь никто не просит — все участвуют. Мы вместе создаём честный круг доверия: сегодня помогаешь ты, завтра помогают тебе. Без посредников, без “чудес”, с уважением и прозрачностью. 🌿</p>
-      </details>
+<section>
+  <div class="container">
 
-      <details class="faq-item">
-        <summary>Куда идут деньги?</summary>
-        <p>Все средства идут в общую кассу проекта. Каждый месяц часть средств распределяется по очереди, а часть резервируется для устойчивости. Всё фиксируется и публикуется для участников.</p>
-      </details>
+    <!-- ФАКТ: 30 больших вопросов -->
+    <div class="faq-block">
 
-      <details class="faq-item">
-        <summary>Можно ли участвовать анонимно?</summary>
-        <p>Да. Истории публикуются только с согласия участников. Всё добровольно и честно. Мы уважаем личное пространство каждого.</p>
-      </details>
+      <h4>1. Что такое Платформа Взаимопомощи?</h4>
+      <p>Это добровольное объединение людей, которые помогают друг другу достигать жилищных целей — квартиры, дома, участка, дачи или другого жилья. Это не кредит, не инвестиция и не банк.</p>
 
-      <details class="faq-item">
-        <summary>Почему важна прозрачность?</summary>
-        <p>Потому что доверие — основа проекта. Каждый участник должен понимать, куда идёт каждый евро. Прозрачность = уверенность, что всё работает по-честному.</p>
-      </details>
+      <h4>2. Для кого создан проект?</h4>
+      <p>Для людей, которые много лет работают, но всё равно не могут накопить на жильё. Для тех, у кого нет богатых родителей, стартового капитала и помощи. Для всех, кто хочет прозрачную, честную и человеческую поддержку.</p>
 
-      <details class="faq-item">
-        <summary>Как я могу помочь, если не участвую?</summary>
-        <p>Можно просто рассказать о проекте друзьям, поделиться ссылкой, внести 1 €, написать вдохновляющее сообщение. Даже маленький шаг может стать большой поддержкой для кого-то. 💫</p>
-      </details>
-    </section>
-  </main>
+      <h4>3. Как работает система?</h4>
+      <p>Каждый участник делает добровольный взнос — 10€, 50€ или 100€. Средства распределяются по открытой очереди. Один человек получает помощь, остальные движутся дальше. После получения помощи человек остаётся и поддерживает следующих.</p>
 
-  <footer class="footer">
-    <p>© 2025 Natalia Domkina — Natalia Help Project — NHP | Вместе мы сильнее 🌿</p>
-  </footer>
+      <h4>4. Почему это честно?</h4>
+      <p>Потому что:</p>
+      <ul>
+        <li>очередь открыта и видна всем;</li>
+        <li>отчётность публикуется;</li>
+        <li>комиссия только на развитие платформы;</li>
+        <li>после получения помощи люди остаются в проекте;</li>
+        <li>никаких “обещаний доходов”, процентов или скрытых условий.</li>
+      </ul>
 
-  <script src="script.js"></script>
+      <h4>5. Какие суммы взносов?</h4>
+      <p>Посильные и добровольные: <strong>10€, 50€, 100€</strong>.</p>
+
+      <h4>6. Почему именно такие суммы?</h4>
+      <p>Они доступны большинству. Небольшие взносы большого количества людей создают реальную силу.</p>
+
+      <h4>7. Что происходит после получения помощи?</h4>
+      <p>Участник остаётся в проекте и помогает другим. Это принцип круга: сегодня помогают вам — завтра вы помогаете следующим.</p>
+
+      <h4>8. Какие цели можно указывать?</h4>
+      <p>Только жильё: квартира, дом, участок, дача, ремонт, первый взнос по ипотеке.</p>
+
+      <h4>9. Можно ли просто сделать пожертвование?</h4>
+      <p>Да. Любой человек может поддержать участников, даже не добавляя себя в очередь.</p>
+
+      <h4>10. За счёт чего проект работает?</h4>
+      <p>За счёт большого количества людей, которые делают посильные регулярные взносы. Один человек не может помочь всем, а тысяча — может.</p>
+
+      <h4>11. Как формируется очередь?</h4>
+      <p>По времени подачи заявки, активности и подтверждённых взносов.</p>
+
+      <h4>12. Насколько всё прозрачно?</h4>
+      <p>Очередь и отчёты публично доступны. Никаких скрытых движений средств нет.</p>
+
+      <h4>13. Что такое комиссия платформы?</h4>
+      <p>Небольшая часть средств на домен, сервер, техподдержку, безопасность и развитие сайта.</p>
+
+      <h4>14. Сколько составляет комиссия?</h4>
+      <p>Минимально возможная. Точный размер указан в разделе отчётности.</p>
+
+      <h4>15. Я получу помощь гарантированно?</h4>
+      <p>Очередь реальная и движется. Но точная скорость зависит от активности участников и числа пожертвований.</p>
+
+      <h4>16. Как узнать, что моя очередь подошла?</h4>
+      <p>Вы увидите это в таблице участников и получите уведомление.</p>
+
+      <h4>17. Можно ли выйти из проекта?</h4>
+      <p>Да. Участие полностью добровольное.</p>
+
+      <h4>18. Нужно ли участвовать каждый месяц?</h4>
+      <p>Нет. Но регулярность помогает очереди двигаться быстрее.</p>
+
+      <h4>19. Есть ли возрастные ограничения?</h4>
+      <p>Да, 18+.</p>
+
+      <h4>20. Какой смысл делиться ссылкой?</h4>
+      <p>Чем больше людей, тем быстрее движется очередь. Это прямая выгода всем.</p>
+
+      <h4>21. Почему проект создан частным лицом?</h4>
+      <p>Потому что это реальная жизненная необходимость, а не бюрократическая идея. Проект создан человеком для людей.</p>
+
+      <h4>22. Это мошенничество?</h4>
+      <p>Нет. Прозрачность, открытая очередь, реальные взносы и отчётность — это исключает мошеннические схемы.</p>
+
+      <h4>23. Почему люди остаются даже после получения помощи?</h4>
+      <p>Потому что это честно и правильно. Так круг поддержки работает для всех.</p>
+
+      <h4>24. Я должна доверять этому проекту?</h4>
+      <p>Только если вам подходит идея прозрачной, честной и посильной взаимопомощи. Всё добровольно.</p>
+
+      <h4>25. Как присоединиться?</h4>
+      <p>Заполнить короткую заявку на странице <a href="apply.html">“Добавить себя”</a>.</p>
+
+      <h4>26. Почему проект может изменить жизнь?</h4>
+      <p>Потому что в одиночку накопить на жильё почти невозможно. А вместе — возможно.</p>
+
+      <h4>27. Можно начать с минимума?</h4>
+      <p>Да. Начните с маленького взноса и посмотрите, как движется очередь.</p>
+
+      <h4>28. Что дальше?</h4>
+      <p>Прочитать информацию — подать заявку — внести взнос.</p>
+
+      <h4>29. Можно ли смотреть очередь без регистрации?</h4>
+      <p>Да. Очередь открыта всем.</p>
+
+      <h4>30. Почему этот проект появился именно сейчас?</h4>
+      <p>Потому что тысячи людей устали ждать и хотят реальных возможностей для жилья.</p>
+
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container" style="text-align:center;">
+    <button class="button" onclick="window.location='apply.html'">Добавить себя</button>
+  </div>
+</section>
+
+<footer>
+  <div class="container">
+    <p>© Платформа Взаимопомощи — добровольная поддержка людей</p>
+    <p><a href="index.html">Главная</a> | <a href="about.html">О проекте</a> | <a href="queue.html">Участники</a></p>
+  </div>
+</footer>
+
 </body>
 </html>
